# Raytracer

./: .gitignore  CMakeLists.txt  README.md
WIP/: Eckart_Young.cpp  convolution.cpp  quaternions.cpp  scene_graph.cpp  sin.cpp
results/: image.ppm
saved_images/: normal_interpolation.ppm  translucent_triangle.ppm
src/: bounding_box.h  bvh.h  camera.h  color.h  cube_map.h  hittable.h  hittable_list.h  image.h  interval.h  main.cpp  material.h  obj_mesh.h  perlin.h  quad.h  ray.h  sphere.h  texture.h  triangle.h  utility.h  vec3.h  volume.h
